--- a/app/public/index.html
+++ b/app/public/index.html
@@ -11,6 +11,10 @@
         html, body, #app {
             height: 100%;
         }
+
+        ::-webkit-scrollbar {
+            display: none;
+        }
     </style>
 </head>
 <body>
